added bumble to extra paths

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
         "types.h": "c",
         "config.h": "c",
         "mutate.h": "c"
-    }
+    },
+    "python.analysis.extraPaths": [
+        "./BLE/bumble"
+    ]
 }
